--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "typescript": "~4.9.5",
+    "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   },
   "scripts": {
